# apptio-data-science-ops

./: .env.example  .gitignore  BOB_VALIDATION_REPORT.md  BOOTSTRAP_COMPLETE.md  CONFLUENCE_INTEGRATION.md  INFRASTRUCTURE_METRICS_ANALYSIS.md  PHASE2_COMPLETE.md  README.md  SETUP.md  bob_inventory.py  bob_step2.py  bob_step3.py  dashboard.json  pyproject.toml
.github/workflows/: bob-full-protocol.yml  bob-step1-inventory.yml  bob-step2-precondition-gate.yml  bob-step3-weekly-summary.yml  bob-step4-dashboard-sync.yml  dashboard-report.yml  generate-dashboard.yml
dashboard/: __init__.py  __main__.py  app.py  build.py  config.py  generate.py
dashboard/templates/: index.html
